--- a/MD.PersianDateTime.Core/MD.PersianDateTime.Core.csproj
+++ b/MD.PersianDateTime.Core/MD.PersianDateTime.Core.csproj
@@ -37,5 +37,11 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+		<Compile Update="PersianDateTime.cs">
+			<SubType>Code</SubType>
+		</Compile>
+	</ItemGroup>
+
 
 </Project>
